--- a/gui/package.json
+++ b/gui/package.json
@@ -18,8 +18,11 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "angular-utf8-base64": "^0.0.5",
     "rxjs": "~7.4.0",
+    "text-encoding": "^0.7.0",
     "tslib": "^2.3.0",
+    "utf8": "^3.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -28,6 +31,8 @@
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/text-encoding": "^0.0.36",
+    "@types/utf8": "^3.0.1",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
